--- a/src/content/work/2.md
+++ b/src/content/work/2.md
@@ -35,4 +35,4 @@ Aenean pretium purus augue, ut bibendum erat convallis quis. Cras condimentum qu
 
 - We noted this
 - And also this other point -->
-<a href="https:/www.axonstudio.tech/" target="_blank">axonstudio.tech</a>
+<a href="https://www.axonstudio.tech/" target="_blank">axonstudio.tech</a>
